디자인추가 #한솔 #a_26_fragment 추가

--- a/WonInfo/app/src/main/res/layout/community_list_item.xml
+++ b/WonInfo/app/src/main/res/layout/community_list_item.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="8dp"
         android:text="title"
         android:textColor="@color/Theme_Black"
@@ -52,7 +52,11 @@
         android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:text=""
+        android:textColor="@color/Theme_Blue"
         android:textAlignment="center"
+        android:textStyle="bold"
+        android:textSize="@dimen/list_item_bigtitle_size"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
@@ -64,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="8dp"
         android:text="content"
         android:textColor="@color/Theme_Gray"
