--- a/WonInfo/app/src/main/res/menu/bottom_bar.xml
+++ b/WonInfo/app/src/main/res/menu/bottom_bar.xml
@@ -8,7 +8,7 @@
         android:title=""/>
     <item
         android:id="@+id/bottom_bar_menu_dictionary"
-        android:icon="@drawable/ic_library"
+        android:icon="@drawable/ic_open_book"
         app:showAsAction="ifRoom"
         android:title=""/>
     <item
@@ -18,7 +18,7 @@
         android:title=""/>
     <item
         android:id="@+id/bottom_bar_menu_custom"
-        android:icon="@drawable/ic_eat_2"
+        android:icon="@drawable/ic_eat_3"
         app:showAsAction="ifRoom"
         android:title=""/>
     <item
