작업 백업 #툴바작업 전 백업 #home_fragment swipeview #all_ripple_click 이벤트 작업 #툴바메뉴 변경 작업

--- a/WonInfo/app/src/main/res/layout/item_menu.xml
+++ b/WonInfo/app/src/main/res/layout/item_menu.xml
@@ -4,7 +4,7 @@
     android:id="@+id/menuList_btn"
     android:layout_width="match_parent"
     android:layout_height="45dp"
-    android:background="@drawable/list_pressed">
+    android:background="@drawable/all_ripple_click">
 
     <ImageView
         android:id="@+id/imageView2"
