--- a/WonInfo/app/src/main/res/layout/community_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/community_main_fragment.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="7dp"
             android:layout_marginStart="8dp"
-            android:background="@drawable/boxbutton"
+            android:background="@drawable/all_ripple_click"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -54,7 +54,7 @@
             android:layout_margin="7dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/boxbutton"
+            android:background="@drawable/all_ripple_click"
             app:layout_constraintBottom_toTopOf="@+id/community_main_4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/community_main_1"
@@ -82,7 +82,7 @@
             android:layout_margin="7dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
-            android:background="@drawable/boxbutton"
+            android:background="@drawable/all_ripple_click"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/community_main_1">
 
@@ -108,7 +108,7 @@
             android:layout_margin="7dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/boxbutton"
+            android:background="@drawable/all_ripple_click"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/community_main_3">
 
@@ -134,7 +134,7 @@
             android:layout_margin="7dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/boxbutton"
+            android:background="@drawable/all_ripple_click"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/community_main_4">
 
@@ -161,7 +161,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
-            android:background="@drawable/boxbutton"
+            android:background="@drawable/all_ripple_click"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/community_main_5"
             app:layout_constraintTop_toBottomOf="@+id/community_main_2">
