--- a/WonInfo/app/src/main/res/layout/dictionary_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/dictionary_main_fragment.xml
@@ -14,9 +14,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:divider="#00000000"
-        android:listSelector="@drawable/list_pressed"
-
+        android:divider="@color/Theme_LightGray"
+        android:dividerHeight="1dp"
      />
 
 
