--- a/WonInfo/app/src/main/res/layout/home_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/home_main_fragment.xml
@@ -16,28 +16,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="389dp"
-        android:layout_height="220dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/a_25_text01" />
-
-    <WebView
-        android:id="@+id/youtube_player_view"
+    <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
+        android:id="@+id/autoViewPager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/Theme_LightGray"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button">
+        app:layout_constraintTop_toBottomOf="@+id/a_25_text01">
 
-    </WebView>
+    </cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager>
+
 </android.support.constraint.ConstraintLayout>
