툴바변경 #툴바작업 #게시판 페이지 디자인 #툴바 디자인

--- a/WonInfo/app/src/main/res/drawable-xxhdpi/box.xml
+++ b/WonInfo/app/src/main/res/drawable-xxhdpi/box.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
-    android:shape="rectangle"
-    >
-    <solid android:color="" />
+    android:shape="rectangle">
+    <solid android:color="#000000ff" />
     <corners
         android:bottomLeftRadius="0dp"
         android:bottomRightRadius="0dp"
