--- a/WonInfo/app/src/main/res/layout/main_appbar_layout.xml
+++ b/WonInfo/app/src/main/res/layout/main_appbar_layout.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
         android:background="@color/Theme_Yellow">
 
         <android.support.v7.widget.Toolbar
@@ -16,41 +16,40 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_marginBottom="1dp"
             android:background="@color/Theme_White"
-            android:fitsSystemWindows="true"
-            android:theme="@style/ToolbarColor">
+            android:fitsSystemWindows="true">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="WON"
                 android:layout_gravity="center"
+                android:text="WON"
                 android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="INFO"
                 android:layout_gravity="center"
+                android:text="INFO"
                 android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_nav_drawer_count"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="-45dp"
+                android:background="@drawable/toolbar_badge_counter"
+                android:gravity="center"
+                android:text="10"
+                android:textColor="@android:color/white"
+                android:textSize="8dp" />
 
         </android.support.v7.widget.Toolbar>
-        <TextView
-            android:id="@+id/tv_nav_drawer_count"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="-45dp"
-            android:background="@drawable/toolbar_badge_counter"
-            android:gravity="center"
-            android:text="10"
-            android:textColor="@android:color/white"
-            android:textSize="8dp"/>
-
     </android.support.design.widget.AppBarLayout>
-
 
     <FrameLayout
         android:id="@+id/main_fragment_container"
@@ -69,7 +68,7 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         android:layout_gravity="bottom"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
