--- a/WonInfo/app/src/main/res/menu/actionbar_menu_community_edit.xml
+++ b/WonInfo/app/src/main/res/menu/actionbar_menu_community_edit.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_edit"
-        android:icon="@drawable/ic_action_search"
+        android:icon="@drawable/ic_action_edit"
         android:title="@string/action_edit"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView"/>
