#한솔 디자인 수정 #메인홈디자인 추가 #로그인창 디자인바꿨는데 안바뀜

--- a/WonInfo/app/src/main/res/layout/nav_header_loggedout.xml
+++ b/WonInfo/app/src/main/res/layout/nav_header_loggedout.xml
@@ -43,9 +43,10 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_settings" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -55,6 +56,6 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@drawable/ic_link" />
 
 </android.support.constraint.ConstraintLayout>
