--- a/WonInfo/app/src/main/res/layout/community_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/community_main_fragment.xml
@@ -35,7 +35,7 @@
 
         <ImageView
             android:layout_width="64dp"
-            android:layout_height="62dp"
+            android:layout_height="64dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -70,6 +70,16 @@
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="101dp"
+            android:layout_height="101dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_free_community" />
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -99,6 +109,15 @@
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="57dp"
+            android:layout_height="57dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_market" />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -120,12 +139,21 @@
             android:layout_margin="15dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="전국노래자랑"
+            android:text="같이타요"
             android:textColor="@color/Theme_Blue"
             android:textSize="@dimen/menubigtitle_size"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_car" />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -149,12 +177,21 @@
             android:layout_margin="15dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="침묵게시판"
+            android:text="동아리홍보"
             android:textColor="@color/Theme_Blue"
             android:textSize="@dimen/menubigtitle_size"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="66dp"
+            android:layout_height="66dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_speaker_2" />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -178,12 +215,21 @@
             android:layout_margin="15dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="인성터진\n사람모임"
+            android:text="BBS"
             android:textColor="@color/Theme_Blue"
             android:textSize="@dimen/menubigtitle_size"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="83dp"
+            android:layout_height="83dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_bbs" />
 
     </android.support.constraint.ConstraintLayout>
 
