--- a/WonInfo/app/src/main/res/layout/community_market_textbroad.xml
+++ b/WonInfo/app/src/main/res/layout/community_market_textbroad.xml
@@ -8,19 +8,60 @@
 
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/community_market_editText1"
         android:layout_width="fill_parent"
         android:layout_height="31dp"
         android:layout_margin="5dp"
-        android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:background="@null"
         android:gravity="top|start"
         android:hint="제목 :"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
+        android:id="@+id/frameLayout4"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/item_line"
+        app:layout_constraintBottom_toTopOf="@+id/community_market_editText4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/community_market_editText1"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/community_main_1"
+        android:layout_width="381dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/all_ripple_click"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/community_market_editText1"
+        app:layout_constraintWidth_percent="0.45">
+
+        <ImageView
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_picture" />
+    </android.support.constraint.ConstraintLayout>
+
+    <FrameLayout
+        android:id="@+id/frameLayout6"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@drawable/item_line"
@@ -32,26 +73,19 @@
     <EditText
         android:id="@+id/community_market_editText4"
         android:layout_width="fill_parent"
-        android:layout_height="290dp"
+        android:layout_height="289dp"
         android:layout_margin="5dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="36dp"
         android:background="@null"
         android:gravity="top|start"
         android:hint="내용 :"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/community_main_1" />
 
     <FrameLayout
+        android:id="@+id/frameLayout5"
         android:layout_width="match_parent"
         android:layout_height="23dp"
-
-
         android:background="@drawable/item_line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -62,19 +96,16 @@
         android:id="@+id/textboard_write_btn"
         android:layout_width="197dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@color/Theme_Red"
         android:onClick="mOnPopupClick"
         android:text="글쓰기"
         android:textColor="@color/Theme_White"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/community_market_editText4"
-        app:layout_constraintVertical_bias="0.062" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout5" />
 
 
 </android.support.constraint.ConstraintLayout>
